--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         @media print {
             body {
                 background-color: white;
-                color: black;
             }
             .print\:hidden {
                 display: none !important;
@@ -35,6 +34,7 @@
                 display: grid !important;
                 grid-template-columns: repeat(7, minmax(0, 1fr)) !important;
             }
+            /* WYSIWYG Printing: Force background colors and remove default browser print styling overrides */
             * {
                 -webkit-print-color-adjust: exact !important;
                 print-color-adjust: exact !important;
@@ -42,18 +42,6 @@
             .shadow-lg, .rounded-xl {
                 box-shadow: none !important;
                 border-radius: 0 !important;
-            }
-            /* Make borders explicit and dark for print */
-            .border-print {
-                border-color: #000 !important;
-                border-width: 2px !important;
-            }
-            .border-print-light {
-                border-color: #d1d5db !important; /* Light gray for meal separators */
-                border-width: 1px !important;
-            }
-            .bg-print-gap {
-                background-color: #000 !important; /* For the grid gap borders */
             }
             input {
                 border: none !important;
@@ -82,7 +70,8 @@
             Palette: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 19l7-7 3 3-7 7-3-3z"/><path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"/><path d="M2 2l7.586 7.586"/><circle cx="11" cy="11" r="2"/></svg>,
             Plus: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>,
             X: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>,
-            Edit: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/></svg>
+            Edit: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/></svg>,
+            Calendar: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
         };
 
         // --- Data & Constants ---
@@ -119,7 +108,7 @@
             { id: 'm18', name: 'Eggplant stir-fry w/ pork', category: 'main' },
         ];
 
-        // Updated themes with Alternating Week colors and darker slots for contrast
+        // Updated themes with Alternating Week colors
         const THEMES = {
             emerald: { 
                 primary: 'bg-emerald-600', 
@@ -128,8 +117,6 @@
                 text: 'text-emerald-800', 
                 hover: 'hover:bg-emerald-100',
                 weekOdd: 'bg-emerald-50',
-                slotBreakfast: 'bg-emerald-100',
-                slotMain: 'bg-emerald-200'
             },
             blue: { 
                 primary: 'bg-blue-600', 
@@ -138,8 +125,6 @@
                 text: 'text-blue-800', 
                 hover: 'hover:bg-blue-100',
                 weekOdd: 'bg-blue-50',
-                slotBreakfast: 'bg-blue-100',
-                slotMain: 'bg-blue-200'
             },
             rose: { 
                 primary: 'bg-rose-600', 
@@ -148,8 +133,6 @@
                 text: 'text-rose-800', 
                 hover: 'hover:bg-rose-100',
                 weekOdd: 'bg-rose-50',
-                slotBreakfast: 'bg-rose-100',
-                slotMain: 'bg-rose-200'
             },
             orange: { 
                 primary: 'bg-orange-600', 
@@ -158,8 +141,6 @@
                 text: 'text-orange-800', 
                 hover: 'hover:bg-orange-100',
                 weekOdd: 'bg-orange-50',
-                slotBreakfast: 'bg-orange-100',
-                slotMain: 'bg-orange-200'
             },
             slate: { 
                 primary: 'bg-slate-700', 
@@ -168,14 +149,13 @@
                 text: 'text-slate-800', 
                 hover: 'hover:bg-slate-100',
                 weekOdd: 'bg-slate-50',
-                slotBreakfast: 'bg-slate-200',
-                slotMain: 'bg-slate-300'
             },
         };
 
         // --- Main App Component ---
         function App() {
             const [mealCount, setMealCount] = useState(3);
+            const [weekCount, setWeekCount] = useState(4); // New State for Weeks
             const [currentTheme, setCurrentTheme] = useState('emerald');
             const [assignments, setAssignments] = useState({});
             const [draggingMeal, setDraggingMeal] = useState(null);
@@ -196,7 +176,8 @@
             const [pendingMeals, setPendingMeals] = useState([]);
 
             const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-            const totalDays = 28;
+            // Dynamic total days
+            const totalDays = weekCount * 7;
             const theme = THEMES[currentTheme];
 
             // Helper: Count meal usage
@@ -371,6 +352,21 @@
                                     ))}
                                 </div>
 
+                                {/* Week Count Toggle */}
+                                <div className="flex bg-white text-gray-800 rounded-lg overflow-hidden text-sm font-medium shadow-sm">
+                                    {[4, 5].map(num => (
+                                        <button
+                                            key={num}
+                                            onClick={() => setWeekCount(num)}
+                                            className={`px-3 py-2 hover:bg-gray-100 transition-colors flex items-center gap-1 ${weekCount === num ? `${theme.text} bg-${theme.secondary.split('-')[1]}-200 font-bold` : ''}`}
+                                            title={`${num} Weeks`}
+                                        >
+                                            <Icons.Calendar className="w-3 h-3" />
+                                            {num} Wks
+                                        </button>
+                                    ))}
+                                </div>
+
                                 {/* Meal Count Toggle */}
                                 <div className="flex bg-white text-gray-800 rounded-lg overflow-hidden text-sm font-medium shadow-sm">
                                     {[1, 2, 3].map(num => (
@@ -528,10 +524,10 @@
                         </aside>
 
                         {/* Main Calendar Area */}
-                        <div className="flex-1 bg-white rounded-xl shadow-lg border-print border-gray-400 overflow-hidden print:shadow-none print:w-full flex flex-col">
+                        <div className="flex-1 bg-white rounded-xl shadow-lg border border-gray-400 overflow-hidden print:shadow-none print:w-full flex flex-col">
                             
                             {/* Editable Calendar Title */}
-                            <div className={`p-4 border-b border-gray-300 border-print flex justify-center items-center ${theme.secondary} bg-opacity-30 relative group`}>
+                            <div className={`p-4 border-b border-gray-300 flex justify-center items-center ${theme.secondary} bg-opacity-30 relative group`}>
                                 <div className="relative w-full max-w-lg flex items-center justify-center">
                                     <input 
                                         type="text" 
@@ -545,7 +541,7 @@
                             </div>
 
                             {/* Calendar Header */}
-                            <div className="grid grid-cols-7 bg-gray-50 border-b border-gray-400 border-print">
+                            <div className="grid grid-cols-7 bg-gray-50 border-b border-gray-400">
                                 {daysOfWeek.map((day, i) => (
                                     <div key={day} className={`p-2 md:p-3 text-center font-bold text-xs md:text-sm uppercase tracking-wider ${theme.text}`}>
                                         <span className="hidden md:inline">{day}</span>
@@ -555,7 +551,7 @@
                             </div>
 
                             {/* Calendar Grid */}
-                            <div className="grid grid-cols-7 auto-rows-fr bg-gray-900 bg-print-gap gap-px border-b border-gray-400 border-print">
+                            <div className="grid grid-cols-7 auto-rows-fr bg-gray-900 gap-px border-b border-gray-400">
                                 {Array.from({ length: totalDays }).map((_, dayIndex) => {
                                     // Determine week number for alternating colors
                                     const weekIndex = Math.floor(dayIndex / 7);
@@ -564,11 +560,6 @@
 
                                     return (
                                         <div key={dayIndex} className={`${dayBgColor} min-h-[150px] flex flex-col relative group`}>
-                                            {/* Day Number (Optional, just visual placeholder) */}
-                                            <div className="absolute top-1 right-1 text-[10px] text-gray-400 pointer-events-none">
-                                                Day {dayIndex + 1}
-                                            </div>
-
                                             {/* Meal Slots */}
                                             <div className="flex-1 flex flex-col h-full">
                                                 {Array.from({ length: mealCount }).map((_, slotIndex) => {
@@ -582,8 +573,14 @@
                                                     else if (mealCount === 2) label = slotIndex === 0 ? 'Brunch' : 'Dinner';
                                                     else label = slotIndex === 0 ? 'Breakfast' : slotIndex === 1 ? 'Lunch' : 'Dinner';
 
-                                                    // Background color logic: if assigned use slot color, else transparent to show week color
-                                                    let bgClass = !assignedMeal ? 'bg-transparent' : (isBreakfast ? theme.slotBreakfast : theme.slotMain);
+                                                    // NEW LOGIC: Keep background transparent (so dayBgColor shows), 
+                                                    // but add a left border to distinguish breakfast/main if assigned.
+                                                    // Using inline style for meal colors to keep it simple, or Tailwind classes.
+                                                    let slotClasses = !assignedMeal 
+                                                        ? 'bg-transparent' 
+                                                        : (isBreakfast 
+                                                            ? 'border-l-4 border-yellow-400 bg-white/40' 
+                                                            : 'border-l-4 border-orange-400 bg-white/40');
 
                                                     return (
                                                         <div
@@ -591,9 +588,9 @@
                                                             onDragOver={handleDragOver}
                                                             onDrop={(e) => handleDrop(e, dayIndex, slotIndex)}
                                                             className={`
-                                                                flex-1 p-1 border-b border-gray-100 border-print-light last:border-0 transition-colors relative flex items-center justify-center text-center
+                                                                flex-1 p-1 border-b border-gray-100 last:border-0 transition-colors relative flex items-center justify-center text-center
                                                                 ${!assignedMeal ? theme.hover : ''}
-                                                                ${bgClass}
+                                                                ${slotClasses}
                                                             `}
                                                         >
                                                             {!assignedMeal && (
