--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         </aside>
 
                         {/* Main Calendar Area */}
-                        <div className="flex-1 bg-white rounded-xl shadow-lg border border-gray-400 overflow-hidden print:shadow-none print:w-full flex flex-col">
+                        <div className="flex-1 w-full max-w-[297mm] mx-auto overflow-hidden bg-white rounded-xl shadow-lg border border-gray-400 flex flex-col print:shadow-none print:w-full print:border-gray-400 print:overflow-visible">
                             
                             {/* Editable Calendar Title */}
                             <div className={`p-4 border-b border-gray-300 flex justify-center items-center ${theme.secondary} bg-opacity-30 relative group`}>
