--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                     const weekBgColor = isAlternateWeek ? theme.weekOdd : 'bg-white';
                                     
                                     return (
-                                        <div key={weekIndex} style={{ display: 'grid', gridTemplateColumns: '0.75in repeat(7, 1.4in)' }} className={`${weekBgColor} gap-px bg-gray-400`}>
+                                        <div key={weekIndex} style={{ display: 'grid', gridTemplateColumns: '0.75in repeat(7, 1.4in)' }} className={`${weekBgColor} gap-px`}>
                                             
                                             {/* Row Title Column (Leftmost) */}
                                             <div className={`${weekBgColor} flex flex-col h-full`}>
